--- a/mingduo-security-browser/pom.xml
+++ b/mingduo-security-browser/pom.xml
@@ -26,12 +26,16 @@
             <version>${mingduo.security.version}</version>
         </dependency>
 
+
         <dependency>
             <groupId>org.springframework.session</groupId>
-            <artifactId>spring-session-core</artifactId>
+            <artifactId>spring-session-data-redis</artifactId>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
