--- a/mingduo-security-demo/src/main/resources/application.properties
+++ b/mingduo-security-demo/src/main/resources/application.properties
@@ -10,4 +10,6 @@ spring.redis.database=3
 
 spring.session.store-type=none
 
-
+logging.level.org.springframework.security=debug
+#浏览器环境配置项，参见BrowserProperties
+#my.security.browser.signInPage = /demo-signIn.html
