登录认证页面 可以配置

--- a/mingduo-security-demo/src/main/resources/application.properties
+++ b/mingduo-security-demo/src/main/resources/application.properties
@@ -11,5 +11,9 @@ spring.redis.database=3
 spring.session.store-type=none
 
 logging.level.org.springframework.security=debug
+
+
+
 #浏览器环境配置项，参见BrowserProperties
 #my.security.browser.signInPage = /demo-signIn.html
+my.security.browser.signInResponseType=REDICT
