--- a/mingduo-security-demo/pom.xml
+++ b/mingduo-security-demo/pom.xml
@@ -11,7 +11,7 @@
     <artifactId>mingduo-security-demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>mingduo-security-demo</name>
-    <description>Demo project for Spring Boot</description>
+    <description>第三方使用security jar包</description>
 
     <properties>
         <java.version>1.8</java.version>
