--- a/mingduo-security-browser/pom.xml
+++ b/mingduo-security-browser/pom.xml
@@ -13,7 +13,7 @@
     <artifactId>mingduo-security-browser</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>mingduo-security-browser</name>
-    <description>Demo project for Spring Boot</description>
+    <description>security适合浏览器模块</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -32,10 +32,7 @@
             <artifactId>spring-session-data-redis</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
+
     </dependencies>
 
     <build>
