--- a/mingduo-security-demo/src/main/resources/application.properties
+++ b/mingduo-security-demo/src/main/resources/application.properties
@@ -1,8 +1,9 @@
+#jdbc配置
 spring.datasource.url = jdbc:mysql://localhost:3306/role-center?serverTimezone=GMT%2B8
 spring.datasource.username = root
 spring.datasource.password = root
 
-
+#redis 配置
 spring.redis.host=172.26.3.240
 spring.redis.password=root1234
 spring.redis.database=3
@@ -16,4 +17,5 @@ logging.level.org.springframework.security=debug
 
 #浏览器环境配置项，参见BrowserProperties
 #my.security.browser.signInPage = /demo-signIn.html
-my.security.browser.signInResponseType=REDICT
+#my.security.browser.signInResponseType=REDICT
+#my.security.code.image.url=/user/*
