微信 qq登录设置

--- a/mingduo-security-demo/src/main/resources/application.properties
+++ b/mingduo-security-demo/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.redis.host=172.26.3.240
 spring.redis.password=root1234
 spring.redis.database=3
 
+server.port=80
 
 spring.session.store-type=none
 
@@ -15,7 +16,23 @@ logging.level.org.springframework.security=debug
 
 
 
+
+
 #浏览器环境配置项，参见BrowserProperties
 #my.security.browser.signInPage = /demo-signIn.html
 #my.security.browser.signInResponseType=REDICT
 #my.security.code.image.url=/user/*
+
+#社交登录功能拦截的url,参见SocilaProperties
+my.security.social.filterProcessesUrl = /qqLogin
+
+#QQ登录配置，参见QQProperties
+my.security.social.qq.app-id = 101815287
+my.security.social.qq.app-secret = caff175e771b35dee5a84c5bc18b97ea
+my.security.social.qq.providerId = qq
+
+
+#微信登录配置，参见WeixinProperties
+my.security.social.weixin.app-id = wxd99431bbff8305a0
+my.security.social.weixin.app-secret = 60f78681d063590a469f1b297feff3c4
+my.security.social.weixin.providerId = weixin
