--- a/mingduo-security-core/pom.xml
+++ b/mingduo-security-core/pom.xml
@@ -17,6 +17,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <spring.social.version>1.1.6.RELEASE</spring.social.version>
     </properties>
 
     <dependencies>
@@ -44,20 +45,27 @@
         <dependency>
             <groupId>org.springframework.social</groupId>
             <artifactId>spring-social-config</artifactId>
+            <version>${spring.social.version}</version>
+
         </dependency>
         <dependency>
             <groupId>org.springframework.social</groupId>
             <artifactId>spring-social-core</artifactId>
+            <version>${spring.social.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.social</groupId>
             <artifactId>spring-social-web</artifactId>
+            <version>${spring.social.version}</version>
+
         </dependency>
 
         <dependency>
             <groupId>org.springframework.social</groupId>
             <artifactId>spring-social-security</artifactId>
+            <version>${spring.social.version}</version>
+
         </dependency>
 
         <dependency>
@@ -73,6 +81,7 @@
         <dependency>
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
+            <version>1.9.3</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -91,17 +100,17 @@
     </dependencies>
 
 
-  <!--  <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-parent</artifactId>
-                <version>2.1.9.RELEASE</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>-->
+    <!--  <dependencyManagement>
+          <dependencies>
+              <dependency>
+                  <groupId>org.springframework.boot</groupId>
+                  <artifactId>spring-boot-starter-parent</artifactId>
+                  <version>2.1.9.RELEASE</version>
+                  <type>pom</type>
+                  <scope>import</scope>
+              </dependency>
+          </dependencies>
+      </dependencyManagement>-->
     <build>
         <plugins>
             <plugin>
