qq登录 注册页面

--- a/mingduo-security-demo/src/main/resources/application.properties
+++ b/mingduo-security-demo/src/main/resources/application.properties
@@ -22,10 +22,11 @@ logging.level.org.springframework.security=debug
 #my.security.browser.signInPage = /demo-signIn.html
 #my.security.browser.signInResponseType=REDICT
 #my.security.code.image.url=/user/*
+my.security.browser.signUpUrl = /demo-signUp.html
 
 #社交登录功能拦截的url,参见SocilaProperties
 my.security.social.filterProcessesUrl = /qqLogin
-
+demo-signUp.html
 #QQ登录配置，参见QQProperties
 my.security.social.qq.app-id = 101819538
 my.security.social.qq.app-secret = 4d0776607d3bda0e23f9e6c35b7351be
