--- a/mingduo-security-demo/src/main/resources/application.properties
+++ b/mingduo-security-demo/src/main/resources/application.properties
@@ -10,12 +10,12 @@ spring.redis.database=3
 
 server.port=80
 
-spring.session.store-type=none
+spring.session.store-type=redis
 
 logging.level.org.springframework.security=debug
 
-
-
+#session 超时时间
+#server.servlet.session.timeout=1m
 
 
 #浏览器环境配置项，参见BrowserProperties
