--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <java.version>1.8</java.version>
         <spring-cloud.version>Greenwich.SR3</spring-cloud.version>
         <spring.io.version>Cairo-SR7</spring.io.version>
+        <spring-session.version>Bean-SR8</spring-session.version>
         <mingduo.security.version>0.0.1-SNAPSHOT</mingduo.security.version>
 
     </properties>
@@ -52,6 +53,13 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-parent</artifactId>
                 <version>2.1.9.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.session</groupId>
+                <artifactId>spring-session-bom</artifactId>
+                <version>${spring-session.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
