--- a/mingduo-security-demo/src/main/resources/application.properties
+++ b/mingduo-security-demo/src/main/resources/application.properties
@@ -2,6 +2,14 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/role-center?serverTimezone=GMT%2B8
 spring.datasource.username = root
 spring.datasource.password = root
+#连接池及重试配置，防止mysql如果8小时自动断开连接问题
+spring.datasource.max-active=100
+spring.datasource.min-idle=10
+spring.datasource.min-evictable-idle-time-millis = 1800000
+spring.datasource.test-on-borrow=true
+spring.datasource.test-on-return=true
+spring.datasource.test-while-idle=true
+spring.datasource.validation-query=select 1
 
 #redis 配置
 spring.redis.host=172.26.3.240
@@ -9,12 +17,14 @@ spring.redis.password=root1234
 spring.redis.database=3
 
 server.port=80
-
+#集群session存储方式 redis的话配置成   REDIS
 spring.session.store-type=redis
 
-logging.level.org.springframework.security=debug
+logging.level.org.springframework.web=trace
+logging.level.org.springframework.security=trace
 
-#session 超时时间
+
+#session超时时间，单位秒 默认是30分钟 设置少于1分钟的话SprigBoot也会自动把session的超时时间设置为1分钟,也就是60s
 #server.servlet.session.timeout=1m
 
 
