--- a/mingduo-security-demo/src/main/resources/application.properties
+++ b/mingduo-security-demo/src/main/resources/application.properties
@@ -46,3 +46,7 @@ my.security.social.qq.providerId = qq
 my.security.social.weixin.app-id = wxd99431bbff8305a0
 my.security.social.weixin.app-secret = 60f78681d063590a469f1b297feff3c4
 my.security.social.weixin.providerId = weixin
+
+#配置 oauth2 客户端信息
+security.oauth2.client.client-id=mingduo
+security.oauth2.client.client-secret=123456
