--- a/mingduo-security-demo/src/main/resources/application.properties
+++ b/mingduo-security-demo/src/main/resources/application.properties
@@ -50,3 +50,4 @@ my.security.social.weixin.providerId = weixin
 #配置 oauth2 客户端信息
 security.oauth2.client.client-id=mingduo
 security.oauth2.client.client-secret=123456
+security.oauth2.client.registered-redirect-uri=http://localhost/
