--- a/mingduo-security-demo/src/main/resources/application.properties
+++ b/mingduo-security-demo/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.datasource.test-while-idle=true
 spring.datasource.validation-query=select 1
 
 #redis 配置
-spring.redis.host=172.26.3.240
-spring.redis.password=root1234
+#spring.redis.host=172.26.3.240
+#spring.redis.password=root1234
 spring.redis.database=3
 
 server.port=80
