认证服务器自定义登录 - 配置令牌名称密钥自定义 配置存储策略

--- a/mingduo-security-demo/src/main/resources/application.properties
+++ b/mingduo-security-demo/src/main/resources/application.properties
@@ -48,6 +48,9 @@ my.security.social.weixin.app-secret = 60f78681d063590a469f1b297feff3c4
 my.security.social.weixin.providerId = weixin
 
 #配置 oauth2 客户端信息
+my.security.oauth2.client[0].client-id=mingduo
+my.security.oauth2.client[0].client-secret=123456
+
+
 security.oauth2.client.client-id=mingduo
 security.oauth2.client.client-secret=123456
-security.oauth2.client.registered-redirect-uri=http://localhost/
