jwt 方式替换掉基础的 token 令牌 和 解析

--- a/mingduo-security-demo/src/main/resources/application.properties
+++ b/mingduo-security-demo/src/main/resources/application.properties
@@ -51,6 +51,8 @@ my.security.social.weixin.providerId = weixin
 my.security.oauth2.client[0].client-id=mingduo
 my.security.oauth2.client[0].client-secret=123456
 
+#配置 oauth2 token  存储策略
+my.security.oauth2.store-type=jwt
 
-security.oauth2.client.client-id=mingduo
-security.oauth2.client.client-secret=123456
+
+
