sso 认证登录  支持 自动跳过审批页面

--- a/mingduo-security-sso-client-B/src/main/resources/application.properties
+++ b/mingduo-security-sso-client-B/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 server.port=8848
+
 server.servlet.context-path=/client2
 
 
-spring.security.user.name=client2
-spring.security.user.password=123
+
 
 security.oauth2.client.client-id=client2
 security.oauth2.client.client-secret=123456
 
-authorization.sso.server=localhost:4444
+authorization.sso.server=http://localhost:4444
 #跳转的应用服务器的地址
 #the authorization uri
 security.oauth2.client.user-authorization-uri=${authorization.sso.server}/oauth/authorize
@@ -16,6 +16,7 @@ security.oauth2.client.user-authorization-uri=${authorization.sso.server}/oauth/
 security.oauth2.client.access-token-uri=${authorization.sso.server}/oauth/token
 #the access jwtkey uri
 security.oauth2.resource.jwt.key-uri=${authorization.sso.server}/oauth/token_key
+
 
 
 
