授权相关 配置 a b应用根据自己配置 实现url 定制化

--- a/mingduo-security-authorize/pom.xml
+++ b/mingduo-security-authorize/pom.xml
@@ -13,7 +13,7 @@
     <artifactId>mingduo-security-authorize</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>mingduo-security-authorize</name>
-    <description>Demo project for Spring Boot</description>
+    <description>用于数据库增删改查 设置权限系统</description>
 
     <properties>
         <java.version>1.8</java.version>
