--- a/mingduo-security-demo/pom.xml
+++ b/mingduo-security-demo/pom.xml
@@ -19,23 +19,23 @@
 
     <dependencies>
         <!-- 使用browser打开下面两个依赖，或者不依赖authorize，而是依赖core，但是要把browser的DemoUserDetailsService中的注解打开-->
-        <!--<dependency>
+        <dependency>
             <groupId>com.mingduo.security</groupId>
             <artifactId>mingduo-security-browser</artifactId>
             <version>${mingduo.security.version}</version>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>com.mingduo.security</groupId>
             <artifactId>mingduo-security-authorize</artifactId>
             <version>${mingduo.security.version}</version>
         </dependency>
 
-        <!-- 使用app打开下面两个依赖-->
-        <dependency>
+        <!-- 使用app打开下面依赖-->
+   <!--     <dependency>
             <groupId>com.mingduo.security</groupId>
             <artifactId>mingduo-security-app</artifactId>
             <version>${mingduo.security.version}</version>
-        </dependency>
+        </dependency>-->
 
 
 
