--- a/cloud-security-gateway-admin/pom.xml
+++ b/cloud-security-gateway-admin/pom.xml
@@ -8,14 +8,15 @@
         <version>0.0.1-SNAPSHOT</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.mingduo.security</groupId>
-    <artifactId>cloud-security-is-product-api</artifactId>
+    <groupId>mingduo-security</groupId>
+    <artifactId>cloud-security-gateway-admin</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>cloud-security-is-product-api</name>
-    <description>product-api</description>
+    <name>cloud-security-gateway-admin</name>
+    <description>前端服务器</description>
 
     <properties>
         <java.version>1.8</java.version>
+        <spring-cloud.version>Greenwich.SR4</spring-cloud.version>
     </properties>
 
     <dependencies>
@@ -25,7 +26,7 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-oauth2</artifactId>
+            <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
         </dependency>
 
         <dependency>
@@ -40,12 +41,23 @@
         </dependency>
     </dependencies>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-
             </plugin>
         </plugins>
     </build>
