--- a/cloud-security-is-gateway-zuul/src/main/resources/application.properties
+++ b/cloud-security-is-gateway-zuul/src/main/resources/application.properties
@@ -3,6 +3,7 @@
 spring.application.name=gateway
 
 server.port=9047
+server.servlet.context-path=/gateway
 
 
 
@@ -27,8 +28,9 @@ zuul.routes.order.url=http://localhost:6060
 #敏感头设置 为空 header都可以转发
 zuul.sensitive-headers=
 
-#zuul 限流 请更新 jdk 8 至最新 https://github.com/marcosbarbero/spring-cloud-zuul-ratelimit
+#zuul 限流  https://github.com/marcosbarbero/spring-cloud-zuul-ratelimit
 zuul.ratelimit.enabled=true
+#[请更新 jdk 8 至最新]
 zuul.ratelimit.repository=jpa
 
 
