基于[授权码]  的前端 session 实现

--- a/cloud-security-gateway-admin/src/main/resources/application.properties
+++ b/cloud-security-gateway-admin/src/main/resources/application.properties
@@ -6,3 +6,6 @@ server.servlet.context-path=/font
 
 zuul.routes.gateway.url=http://localhost:9047
 zuul.sensitive-headers=
+
+
+font.admin.store-strategy=cookie
