--- a/cloud-security-gateway-admin/src/main/resources/application.properties
+++ b/cloud-security-gateway-admin/src/main/resources/application.properties
@@ -4,7 +4,8 @@ server.servlet.context-path=/font
 
 
 
-zuul.routes.gateway.url=http://localhost:9047
+zuul.routes.api.url=http://localhost:9047/gateway
+
 zuul.sensitive-headers=
 
 
