--- a/cloud-security-is-server-auth/pom.xml
+++ b/cloud-security-is-server-auth/pom.xml
@@ -40,6 +40,10 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-jdbc</artifactId>
+        </dependency>
 
     </dependencies>
 
