--- a/cloud-security-gateway-zuul/src/main/resources/application.properties
+++ b/cloud-security-gateway-zuul/src/main/resources/application.properties
@@ -52,6 +52,13 @@ zuul.ratelimit.policy-list.token[0].refresh-interval=1
 zuul.ratelimit.policy-list.token[0].type[0]=url
 
 
+logging.level.org.springframework.security.web=debug
+
+
+#获取签名
+security.oauth2.resource.jwt.key-uri=http://localhost:9090/oauth/token_key
+security.oauth2.client.client-id=gateway
+security.oauth2.client.client-secret=123456
 
 
 
