--- a/cloud-security-is-product-api/src/main/resources/application.properties
+++ b/cloud-security-is-product-api/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port=8086
 
+
+
+#»ñÈ¡Ç©Ãû
+security.oauth2.resource.jwt.key-uri=http://localhost:9090/oauth/token_key
+security.oauth2.client.client-id=product
+security.oauth2.client.client-secret=123456
