--- a/cloud-security-font-admin/src/main/resources/application.properties
+++ b/cloud-security-font-admin/src/main/resources/application.properties
@@ -9,4 +9,4 @@ zuul.routes.api.url=http://localhost:9047/gateway
 zuul.sensitive-headers=
 
 
-#font.admin.store-strategy=cookie
+font.admin.store-strategy=cookie
