--- a/cloud-security-is-order-api/src/main/resources/application.properties
+++ b/cloud-security-is-order-api/src/main/resources/application.properties
@@ -5,3 +5,8 @@ logging.level.org.springframework.security.web=debug
 
 
 
+#»ñÈ¡Ç©Ãû
+security.oauth2.resource.jwt.key-uri=http://localhost:9090/oauth/token_key
+security.oauth2.client.client-id=order
+security.oauth2.client.client-secret=123456
+
