--- a/cloud-security-is-order-api/src/main/resources/application.properties
+++ b/cloud-security-is-order-api/src/main/resources/application.properties
@@ -10,3 +10,9 @@ security.oauth2.resource.jwt.key-uri=http://localhost:9090/oauth/token_key
 security.oauth2.client.client-id=order
 security.oauth2.client.client-secret=123456
 
+#sentinel 配置
+spring.application.name=order
+#通信端口
+spring.cloud.sentinel.transport.port=8719
+#dashboard页面
+spring.cloud.sentinel.transport.dashboard=localhost:8080
