--- a/cloud-security-is-price-api/src/main/resources/application.properties
+++ b/cloud-security-is-price-api/src/main/resources/application.properties
@@ -12,6 +12,8 @@ management.endpoints.web.exposure.include=*
 
 
 logging.config=classpath:logback.xml
+logging.pattern.console=%d{HH:mm:ss.SSS} [%thread] [TxId:%X{PtxId},SpanId:%X{PspanId}] %-5level %logger{36} - %msg%n
+
 
 #	<property name="LOG_FILE" value="${LOG_FILE:-${LOG_PATH:-${LOG_TEMP:-${java.io.tmpdir:-/tmp}}}/spring.log}"/>
 #logging.file=price.log
