--- a/cloud-security-is-order-api/pom.xml
+++ b/cloud-security-is-order-api/pom.xml
@@ -6,7 +6,7 @@
         <artifactId>mingduo-security</artifactId>
         <groupId>com.mingduo.security</groupId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
     <groupId>mingduo-security</groupId>
     <artifactId>cloud-security-is-order-api</artifactId>
@@ -19,6 +19,8 @@
     </properties>
 
     <dependencies>
+
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -59,6 +61,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring-boot.version}</version>
             </plugin>
         </plugins>
     </build>
