--- a/cloud-security-is-user-api/src/main/resources/application.properties
+++ b/cloud-security-is-user-api/src/main/resources/application.properties
@@ -11,8 +11,11 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 
-server.ssl.key-store=classpath:mingduo.key
-server.ssl.key-password=MINGDUO
-server.ssl.key-store-password=MINGDUO
+logging.pattern.console=%d{HH:mm:ss.SSS} [%thread] [TxId:%X{PtxId},SpanId:%X{PspanId}] %-5level %logger{36} - %msg%n
+
+#自定义证书
+#server.ssl.key-store=classpath:mingduo.key
+#server.ssl.key-password=MINGDUO
+#server.ssl.key-store-password=MINGDUO
 
 
