--- a/boot-security/mingduo-security-authorize/pom.xml
+++ b/boot-security/mingduo-security-authorize/pom.xml
@@ -7,7 +7,7 @@
         <groupId>com.mingduo.security</groupId>
         <version>0.0.1-SNAPSHOT</version>
 
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>mingduo-security-authorize</artifactId>
