--- a/boot-security/mingduo-security-demo/pom.xml
+++ b/boot-security/mingduo-security-demo/pom.xml
@@ -6,6 +6,8 @@
         <artifactId>boot-security</artifactId>
         <groupId>com.mingduo.security</groupId>
         <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+
     </parent>
 
     <artifactId>mingduo-security-demo</artifactId>
