--- a/boot-security/mingduo-security-sso-client-A/pom.xml
+++ b/boot-security/mingduo-security-sso-client-A/pom.xml
@@ -6,7 +6,7 @@
         <artifactId>boot-security</artifactId>
         <groupId>com.mingduo.security</groupId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>mingduo-security-sso-client-a</artifactId>
     <version>0.0.1-SNAPSHOT</version>
