--- a/cloud-security/cloud-security-font-admin/pom.xml
+++ b/cloud-security/cloud-security-font-admin/pom.xml
@@ -6,7 +6,7 @@
         <artifactId>cloud-security</artifactId>
         <groupId>com.mingduo.security</groupId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <groupId>mingduo-security</groupId>
     <artifactId>cloud-security-font-admin</artifactId>
