--- a/cloud-security/cloud-security-is-product-api/pom.xml
+++ b/cloud-security/cloud-security-is-product-api/pom.xml
@@ -6,7 +6,7 @@
         <artifactId>cloud-security</artifactId>
         <groupId>com.mingduo.security</groupId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>cloud-security-is-product-api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
